<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="visible"
    tools:context=".SaleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@android:string/untitled"
            android:src="@drawable/home_decor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sale"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Sale Code"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:hint=""/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Id Seller"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Seller"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Client Name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Client"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:hint="@string/hint_name"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txt_type"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:hint=""/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Quantity"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Quantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:hint=""/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Value Sale"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_Value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:hint="Value"/>

        <Button
            android:id="@+id/btn_SaveS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="10dp"
            android:onClick="onSave"
            android:text="@string/txt_save" />
    </LinearLayout>

</LinearLayout>